# serde-versioning

./: Cargo.toml
examples/: simple.rs
src/: lib.rs
